[gd_scene load_steps=15 format=3 uid="uid://3vfd2rw72r42"]

[ext_resource type="Script" uid="uid://ydl22yb0cm65" path="res://game/menus/mainmenu/BackgroundFadeLoop.gd" id="1"]
[ext_resource type="Script" uid="uid://cyya0oolm3yee" path="res://game/menus/mainmenu/LPSpin.gd" id="2"]
[ext_resource type="Script" uid="uid://dxrxikk02w2n7" path="res://game/menus/onlinemenu/OnlineModes.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://d3jnh37mq4dor" path="res://game/assets/sprites/UI/MainMenus/AruDJ/Timeline 1_0000.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bvgnj3khkmjjr" path="res://game/assets/sprites/UI/MainMenus/AruDJ/Timeline 1_0002.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b6ow73udpctn1" path="res://game/assets/sprites/UI/MainMenus/AruDJ/Timeline 1_0001.png" id="7"]
[ext_resource type="Material" uid="uid://bofoucuf31088" path="res://game/assets/shaders/EarthBoundV1.tres" id="8"]
[ext_resource type="Texture2D" uid="uid://kjlqkbldjwjy" path="res://game/assets/sprites/BGArt/Earthbound1.png" id="9"]
[ext_resource type="Material" uid="uid://cffvtcw31hg4s" path="res://game/assets/shaders/EarthBoundV2.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://dnrbymofxcin4" path="res://game/assets/sprites/UI/MainMenus/WIM.png" id="11"]
[ext_resource type="Texture2D" uid="uid://biq18vleavg8w" path="res://game/assets/sprites/UI/MainMenus/WIMScreen.png" id="12"]
[ext_resource type="Texture2D" uid="uid://0xw5lcnwgjfc" path="res://game/assets/sprites/BGArt/Earthbound2.png" id="13"]

[sub_resource type="Animation" id="2"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AruDJ2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("4"), ExtResource("7"), ExtResource("5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f2ibt"]
_data = {
&"Idle": SubResource("2")
}

[node name="OnlineModes" type="Node2D"]
script = ExtResource("3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -205.0
offset_top = 30.0
offset_right = 266.0
offset_bottom = 160.0
scale = Vector2(2, 2)
text = "Netplay:"

[node name="NameLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -941.0
offset_top = 10.0
offset_right = -470.0
offset_bottom = 140.0
scale = Vector2(1.56009, 1.2171)
text = "Netplay:"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
offset_left = 758.0
offset_top = 204.0
offset_right = 1122.0
offset_bottom = 350.0
scale = Vector2(2.5301, 2.93276)

[node name="HostLabel" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Private Room"

[node name="CreateRoomButton" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create Room"

[node name="JoinRoomButton" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Room"

[node name="HostLabel2" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Public Room"

[node name="CreatePublicRoomButton" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create Room"

[node name="FindPublicRoomButton" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Find Room"

[node name="HostLabel3" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChangeControlsButton" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Change Controls"

[node name="Earthbound" type="Sprite2D" parent="."]
visible = false
material = ExtResource("10")
position = Vector2(961, 539)
texture = ExtResource("9")

[node name="EarthboundGod" type="Sprite2D" parent="."]
visible = false
material = ExtResource("10")
position = Vector2(961, 539)
texture = ExtResource("13")

[node name="Earthbound2" type="Sprite2D" parent="."]
self_modulate = Color(0.0980392, 0.180392, 0.356863, 1)
material = ExtResource("8")
position = Vector2(961, 539)
texture = ExtResource("12")

[node name="Background" type="Sprite2D" parent="."]
visible = false
position = Vector2(961, 539)
texture = ExtResource("12")
script = ExtResource("1")

[node name="LP" type="Sprite2D" parent="."]
position = Vector2(185, 817)
texture = ExtResource("11")
script = ExtResource("2")

[node name="AruDJ2" type="Sprite2D" parent="."]
position = Vector2(258, 911)
texture = ExtResource("4")

[node name="AruDJAnimator" type="AnimationPlayer" parent="."]
reset_on_save = false
root_node = NodePath("../Background")
libraries = {
&"": SubResource("AnimationLibrary_f2ibt")
}

[connection signal="pressed" from="CanvasLayer/GridContainer/CreateRoomButton" to="." method="_on_create_private_room_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/JoinRoomButton" to="." method="_on_join_private_room_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/CreatePublicRoomButton" to="." method="_on_create_public_room"]
[connection signal="pressed" from="CanvasLayer/GridContainer/FindPublicRoomButton" to="." method="_on_find_public_match"]
[connection signal="pressed" from="CanvasLayer/GridContainer/ChangeControlsButton" to="." method="_on_change_controls"]
